--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="">
   <div class="navbar-fixed">
   <nav class="dark-blue" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#"><img class="brand-logo" src="images/logo.svg" alt="" height="50px"/></a>
+    <div class="nav-wrapper container"><a id="logo-container" href="#top"><img class="brand-logo" src="images/logo.svg" alt="" height="50px"/></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#about">about</a></li>
         <li><a href="#music">music</a></li>
@@ -47,7 +47,7 @@
     </div>
   </nav>
 </div>
-<div class="parallax-container">
+<div class="parallax-container" id="top">
       <div class="parallax"><img src="images/live.jpg"></div>
     </div>
   <div class="section yellow lighten-4" id="about">
